# stonetomaton

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
src/: bitgrid.rs  challenge4.rs  grid.rs  main.rs  movement.rs  options.rs  position.rs  puzzle.rs
submissions/level1/: output.txt
submissions/level2/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
