[package]
name = "stonetomaton"
description = "Find paths in 2-D-automaton mazes"
version = "0.2.0"
edition = "2021"
rust-version = "1.68.1"
authors = ["Jonas Malaco"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.3", default-features = false, features = ["std", "no-rng"] }
bit-vec = "0.6.3"
clap = { version = "4.2.1", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
